# esp32s3-lilygo-thmi-st7789

./: .clangd  .cproject  .gitignore  .project  README.md
software/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
software/main/: CMakeLists.txt  i80_controller_example_main.c  idf_component.yml  lvgl_demo_ui.c  main.c  main.h
software/main/display/: i80_controller.c  i80_controller.h  lvgl_ui.c  lvgl_ui.h
software/main/gpio/: button.c  button.h  esp_interrupt.c  esp_interrupt.h  gpio_config.c  gpio_config.h
software/main/hdc1080/: hdc1080.c  hdc1080.h
software/main/images/: ui_img_1062568172.c  ui_img_1282837856.c  ui_img_525640412.c  ui_img_air_quality_gauge_png.c  ui_img_background_png.c  ui_img_gauge_empty_png.c  ui_img_gauge_full_png.c  ui_img_gauge_pointer_png.c  ui_img_mqtt_active_png.c  ui_img_mqtt_passive_png.c  ui_img_rhomboid_png.c  ui_img_status_png.c  ui_img_ue_logo_png.c  ui_img_useful_electronics_png.c  ui_img_wifi_active_png.c  ui_img_wifi_passive_png.c
software/main/sgp40/: driver_sgp40.c  driver_sgp40_interface.c  driver_sgp40_interface.h  i2c_config.c  i2c_config.h
software/main/uwb/: at_command.c  at_command.h  function_buffer.c  function_buffer.h  ryuw122.c  ryuw122.h  uart_config.c  uart_config.h
software/main/wireless/: mqtt.c  mqtt.h  wifi_connect.h
ui/: CMakeLists.txt  T-HMI.sll  T-HMI.spj  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/components/: ui_comp_hook.c
ui/images/: ui_img_1062568172.c  ui_img_air_quality_gauge_png.c  ui_img_background_png.c  ui_img_gauge_empty_png.c  ui_img_gauge_full_png.c  ui_img_gauge_pointer_png.c  ui_img_rhomboid_png.c  ui_img_status_png.c
ui/screens/: ui_Screen1.c  ui_Screen2.c
ui/squareline Output/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.h
ui/squareline Output/images/: ui_img_ue_logo_png.c  ui_img_useful_electronics_png.c
ui/squareline Output/screens/: ui_Screen1.c
